# file-store

./: Cargo.toml
primary/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
primary/migrations/: down.sql  migrate.go  up.sql
primary/server/: server.go
primary/server/schemas/: schemas.go
primary/server/services/: auth.go
primary/server/utils/: utils.go
primary/web-client/: package-lock.json  package.json
primary/web-client/src/: App.js
primary/web-client/src/screens/: LoginScreen.js
replica/: .gitignore  Cargo.toml
replica/src/: cli.rs  index.rs  main.rs
src/: main.rs
