[package]
name = "file-store"
version = "0.1.0"
authors = ["Tyler Stanish <tystanish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.5"
fxhash = "0.2.1"
crc32fast = "1.2.0"
inotify = "0.8"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.1.0"